--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ axum = { version = "0.6.4", optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version = "0.2", default-features = false, features = ["serde"] }
-leptos_axum = { version = "0.2", optional = true }
-leptos_meta = { version = "0.2", default-features = false }
-leptos_router = { version = "0.2", default-features = false }
+leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false, features = ["serde"] }
+leptos_axum = { git = "https://github.com/leptos-rs/leptos", optional = true }
+leptos_meta = { git = "https://github.com/leptos-rs/leptos", default-features = false }
+leptos_router = { git = "https://github.com/leptos-rs/leptos", default-features = false }
 log = "0.4"
 simple_logger = "4"
 tokio = { version = "1.25.0", optional = true }
@@ -24,20 +24,11 @@ wasm-bindgen = "0.2"
 thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
+serde = { version = "1.0.160", features = ["derive"] }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
-ssr = [
-    "dep:axum",
-    "dep:tokio",
-    "dep:tower",
-    "dep:tower-http",
-    "dep:leptos_axum",
-    "leptos/ssr",
-    "leptos_meta/ssr",
-    "leptos_router/ssr",
-    "dep:tracing"
-]
+ssr = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:leptos_axum", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:tracing"]
 
 [package.metadata.cargo-all-features]
 denylist = [
