--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,8 @@ thiserror = "1.0.38"
 tracing = { version = "0.1.37", optional = true }
 http = "0.2.8"
 serde = { version = "1.0.160", features = ["derive"] }
-sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"], optional = true }
+sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "chrono"], optional = true }
+chrono = { version = "0.4.24", features = ["serde"] }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
