--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ http = "0.2.8"
 serde = { version = "1.0.160", features = ["derive"] }
 sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "chrono"], optional = true }
 chrono = { version = "0.4.24", features = ["serde"] }
+serde_json = "1.0.96"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
