--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,10 @@ serde = { version = "1.0.160", features = ["derive"] }
 sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "chrono"], optional = true }
 chrono = { version = "0.4.24", features = ["serde"] }
 serde_json = "1.0.96"
+anyhow = "1.0.70"
+reqwest = { version = "0.11.16", features = ["json"] }
+dotenvy = "0.15.7"
+base64 = "0.21.0"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
